Move "shared" folder and fix Arduino setup.

--- a/arduino/TomBoy/platformio.ini
+++ b/arduino/TomBoy/platformio.ini
@@ -17,6 +17,9 @@
 # Automatic targets - enable auto-uploading
 # targets = upload
 
+[platformio]
+lib_dir = ../../shared
+
 [env:uno]
 platform = atmelavr
 framework = arduino
