Fix Desktop setup.

--- a/desktop/windows/TomBoy/TomBoy/TomBoy.vcxproj
+++ b/desktop/windows/TomBoy/TomBoy/TomBoy.vcxproj
@@ -19,40 +19,40 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\arduino\TomBoy\src\shared\app\basicapp.cpp" />
-    <ClCompile Include="..\..\..\..\arduino\TomBoy\src\shared\controlsmanager\basiccontrolsmanager.cpp" />
-    <ClCompile Include="..\..\..\..\arduino\TomBoy\src\shared\gameobject\sprite.cpp" />
-    <ClCompile Include="..\..\..\..\arduino\TomBoy\src\shared\game\levelscene.cpp" />
-    <ClCompile Include="..\..\..\..\arduino\TomBoy\src\shared\game\player.cpp" />
-    <ClCompile Include="..\..\..\..\arduino\TomBoy\src\shared\hardware\hardwaregateway.cpp" />
-    <ClCompile Include="..\..\..\..\arduino\TomBoy\src\shared\renderer\basicrenderer.cpp" />
-    <ClCompile Include="..\..\..\..\arduino\TomBoy\src\shared\scene\basicscene.cpp" />
+    <ClCompile Include="..\..\..\..\shared\lib\api\app\basicapp.cpp" />
+    <ClCompile Include="..\..\..\..\shared\lib\api\controlsmanager\basiccontrolsmanager.cpp" />
+    <ClCompile Include="..\..\..\..\shared\lib\api\gameobject\sprite.cpp" />
+    <ClCompile Include="..\..\..\..\shared\lib\api\hardware\hardwaregateway.cpp" />
+    <ClCompile Include="..\..\..\..\shared\lib\api\renderer\basicrenderer.cpp" />
+    <ClCompile Include="..\..\..\..\shared\lib\api\scene\basicscene.cpp" />
+    <ClCompile Include="..\..\..\..\shared\lib\game\levelscene.cpp" />
+    <ClCompile Include="..\..\..\..\shared\lib\game\player.cpp" />
     <ClCompile Include="..\..\..\desktopapp.cpp" />
     <ClCompile Include="..\..\..\desktopcontrolsdriver.cpp" />
     <ClCompile Include="..\..\..\desktopdisplaydriver.cpp" />
     <ClCompile Include="..\..\..\main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\..\arduino\TomBoy\src\shared\app\basicapp.h" />
-    <ClInclude Include="..\..\..\..\arduino\TomBoy\src\shared\app\iapp.h" />
-    <ClInclude Include="..\..\..\..\arduino\TomBoy\src\shared\controlsmanager\basiccontrolsmanager.h" />
-    <ClInclude Include="..\..\..\..\arduino\TomBoy\src\shared\controlsmanager\icontrolsmanager.h" />
-    <ClInclude Include="..\..\..\..\arduino\TomBoy\src\shared\gameobject\igameobject.h" />
-    <ClInclude Include="..\..\..\..\arduino\TomBoy\src\shared\gameobject\sprite.h" />
-    <ClInclude Include="..\..\..\..\arduino\TomBoy\src\shared\game\assets.h" />
-    <ClInclude Include="..\..\..\..\arduino\TomBoy\src\shared\game\levelscene.h" />
-    <ClInclude Include="..\..\..\..\arduino\TomBoy\src\shared\game\player.h" />
-    <ClInclude Include="..\..\..\..\arduino\TomBoy\src\shared\hardware\icontrolsdriver.h" />
-    <ClInclude Include="..\..\..\..\arduino\TomBoy\src\shared\hardware\idisplaydriver.h" />
-    <ClInclude Include="..\..\..\..\arduino\TomBoy\src\shared\hardware\hardwaregateway.h" />
-    <ClInclude Include="..\..\..\..\arduino\TomBoy\src\shared\hardware\idriver.h" />
-    <ClInclude Include="..\..\..\..\arduino\TomBoy\src\shared\renderer\basicrenderer.h" />
-    <ClInclude Include="..\..\..\..\arduino\TomBoy\src\shared\renderer\irenderer.h" />
-    <ClInclude Include="..\..\..\..\arduino\TomBoy\src\shared\scene\basicscene.h" />
-    <ClInclude Include="..\..\..\..\arduino\TomBoy\src\shared\scene\iscene.h" />
-    <ClInclude Include="..\..\..\..\arduino\TomBoy\src\shared\tomboydefines.h" />
-    <ClInclude Include="..\..\..\..\arduino\TomBoy\src\shared\utils\arraylist.h" />
-    <ClInclude Include="..\..\..\..\arduino\TomBoy\src\shared\utils\iarraylist.h" />
+    <ClInclude Include="..\..\..\..\shared\lib\api\app\basicapp.h" />
+    <ClInclude Include="..\..\..\..\shared\lib\api\app\iapp.h" />
+    <ClInclude Include="..\..\..\..\shared\lib\api\controlsmanager\basiccontrolsmanager.h" />
+    <ClInclude Include="..\..\..\..\shared\lib\api\controlsmanager\icontrolsmanager.h" />
+    <ClInclude Include="..\..\..\..\shared\lib\api\gameobject\igameobject.h" />
+    <ClInclude Include="..\..\..\..\shared\lib\api\gameobject\sprite.h" />
+    <ClInclude Include="..\..\..\..\shared\lib\api\hardware\hardwaregateway.h" />
+    <ClInclude Include="..\..\..\..\shared\lib\api\hardware\icontrolsdriver.h" />
+    <ClInclude Include="..\..\..\..\shared\lib\api\hardware\idisplaydriver.h" />
+    <ClInclude Include="..\..\..\..\shared\lib\api\hardware\idriver.h" />
+    <ClInclude Include="..\..\..\..\shared\lib\api\renderer\basicrenderer.h" />
+    <ClInclude Include="..\..\..\..\shared\lib\api\renderer\irenderer.h" />
+    <ClInclude Include="..\..\..\..\shared\lib\api\scene\basicscene.h" />
+    <ClInclude Include="..\..\..\..\shared\lib\api\scene\iscene.h" />
+    <ClInclude Include="..\..\..\..\shared\lib\api\tomboydefines.h" />
+    <ClInclude Include="..\..\..\..\shared\lib\api\utils\arraylist.h" />
+    <ClInclude Include="..\..\..\..\shared\lib\api\utils\iarraylist.h" />
+    <ClInclude Include="..\..\..\..\shared\lib\game\assets.h" />
+    <ClInclude Include="..\..\..\..\shared\lib\game\levelscene.h" />
+    <ClInclude Include="..\..\..\..\shared\lib\game\player.h" />
     <ClInclude Include="..\..\..\desktopapp.h" />
     <ClInclude Include="..\..\..\desktopcontrolsdriver.h" />
     <ClInclude Include="..\..\..\desktopdisplaydriver.h" />
