--- a/desktop/windows/TomBoy/TomBoy/TomBoy.vcxproj
+++ b/desktop/windows/TomBoy/TomBoy/TomBoy.vcxproj
@@ -27,6 +27,8 @@
     <ClCompile Include="..\..\..\..\shared\lib\api\hardware\hardwaregateway.cpp" />
     <ClCompile Include="..\..\..\..\shared\lib\api\renderer\basicrenderer.cpp" />
     <ClCompile Include="..\..\..\..\shared\lib\api\scene\basicscene.cpp" />
+    <ClCompile Include="..\..\..\..\shared\lib\api\scene\basicscenemanager.cpp" />
+    <ClCompile Include="..\..\..\..\shared\lib\game\gamescenemanager.cpp" />
     <ClCompile Include="..\..\..\..\shared\lib\game\levelscene.cpp" />
     <ClCompile Include="..\..\..\..\shared\lib\game\player.cpp" />
     <ClCompile Include="..\..\..\desktopapp.cpp" />
@@ -50,11 +52,14 @@
     <ClInclude Include="..\..\..\..\shared\lib\api\renderer\basicrenderer.h" />
     <ClInclude Include="..\..\..\..\shared\lib\api\renderer\irenderer.h" />
     <ClInclude Include="..\..\..\..\shared\lib\api\scene\basicscene.h" />
+    <ClInclude Include="..\..\..\..\shared\lib\api\scene\basicscenemanager.h" />
     <ClInclude Include="..\..\..\..\shared\lib\api\scene\iscene.h" />
+    <ClInclude Include="..\..\..\..\shared\lib\api\scene\iscenemanager.h" />
     <ClInclude Include="..\..\..\..\shared\lib\api\tomboydefines.h" />
     <ClInclude Include="..\..\..\..\shared\lib\api\utils\arraylist.h" />
     <ClInclude Include="..\..\..\..\shared\lib\api\utils\iarraylist.h" />
     <ClInclude Include="..\..\..\..\shared\lib\game\assets.h" />
+    <ClInclude Include="..\..\..\..\shared\lib\game\gamescenemanager.h" />
     <ClInclude Include="..\..\..\..\shared\lib\game\levelscene.h" />
     <ClInclude Include="..\..\..\..\shared\lib\game\player.h" />
     <ClInclude Include="..\..\..\desktopapp.h" />
