Add classes Vector2 and AABB. Add collision with Coins.

--- a/desktop/windows/TomBoy/TomBoy/TomBoy.vcxproj
+++ b/desktop/windows/TomBoy/TomBoy/TomBoy.vcxproj
@@ -25,6 +25,8 @@
     <ClCompile Include="..\..\..\..\shared\lib\api\graphics\image.cpp" />
     <ClCompile Include="..\..\..\..\shared\lib\api\graphics\texture.cpp" />
     <ClCompile Include="..\..\..\..\shared\lib\api\hardware\hardwaregateway.cpp" />
+    <ClCompile Include="..\..\..\..\shared\lib\api\math\aabb.cpp" />
+    <ClCompile Include="..\..\..\..\shared\lib\api\math\vector2.cpp" />
     <ClCompile Include="..\..\..\..\shared\lib\api\renderer\basicrenderer.cpp" />
     <ClCompile Include="..\..\..\..\shared\lib\api\scene\basicscene.cpp" />
     <ClCompile Include="..\..\..\..\shared\lib\api\scene\basicscenemanager.cpp" />
@@ -52,6 +54,8 @@
     <ClInclude Include="..\..\..\..\shared\lib\api\hardware\idisplaydriver.h" />
     <ClInclude Include="..\..\..\..\shared\lib\api\hardware\idriver.h" />
     <ClInclude Include="..\..\..\..\shared\lib\api\hardware\irandomdriver.h" />
+    <ClInclude Include="..\..\..\..\shared\lib\api\math\aabb.h" />
+    <ClInclude Include="..\..\..\..\shared\lib\api\math\vector2.h" />
     <ClInclude Include="..\..\..\..\shared\lib\api\renderer\basicrenderer.h" />
     <ClInclude Include="..\..\..\..\shared\lib\api\renderer\irenderer.h" />
     <ClInclude Include="..\..\..\..\shared\lib\api\scene\basicscene.h" />
